@@ -245,6 +245,10 @@
 			</div>
 			<input id="co_name" class="required" maxlength="40" name="co_name" size="20" type="text" tabindex="1" value="" />
 		</form>
+		
+		<form id="withTitle">
+			<input class="required" name="hastitle" type="text" title="fromtitle" />
+		</form>
 	</div>
 	
 	<ol id="tests"></ol>
